fix: changed upload method to post
