# swagger.json
@@ -104,7 +104,7 @@
           }
         },
         "/upload": {
-          "get": {
+          "post": {
             "summary":"Upload files",
             "description": "This endpoint receive a text file and save them in database",
             "tags": ["Uploads"],
@@ -114,7 +114,7 @@
                   "schema": {
                     "type": "object",
                     "properties": {
-                      "filename": {
+                      "file": {
                         "type": "string",
                         "format": "binary"
                       }
